fixed alignment

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -48,7 +48,7 @@
 }
 .main-logo__link {
   display: block;
-  padding: 4px 6px;
+  padding: 6px 6px;
   border-radius: 2px;
   font-size: 24px;
   font-size: 1.5rem;
